python3-aiostem (0.1.0) unstable; urgency=low

  * Initial debian release.

 -- Romain Bezut <morian@xdec.net>  Sun, 31 Jan 2021 18:55:00 +0000