@@ -1,10 +1,15 @@
 # -*- coding: utf-8 -*-
 
-from aiostem.extra.hscheck import HiddenServiceChecker, HiddenServiceFetchRequest
+from aiostem.extra.hscheck import (
+    HiddenServiceChecker,
+    HiddenServiceFetchError,
+    HiddenServiceFetchRequest,
+)
 from typing import Tuple
 
 
 __all__: Tuple[str, ...] = (
     "HiddenServiceChecker",
+    "HiddenServiceFetchError",
     "HiddenServiceFetchRequest",
 )
